--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "expo": "~40.0.0",
-    "expo-updates": "~0.4.0",
+    "expo-camera": "^10.0.0",
+    "expo-file-system": "~9.3.0",
     "expo-splash-screen": "~0.8.0",
+    "expo-updates": "~0.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
