--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "date-fns": "^2.19.0",
     "expo": "~40.0.0",
     "expo-camera": "^10.0.0",
     "expo-file-system": "~9.3.0",
+    "expo-media-library": "~10.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-updates": "~0.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.0",
     "react-native-unimodules": "~0.12.0",
