--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-av": "~8.7.0",
     "expo-camera": "^10.0.0",
     "expo-file-system": "~9.3.0",
+    "expo-keep-awake": "~8.4.0",
     "expo-media-library": "~10.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-updates": "~0.4.0",
