--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~40.0.0",
     "expo-av": "~8.7.0",
     "expo-camera": "^10.0.0",
+    "expo-constants": "~9.3.3",
     "expo-file-system": "~9.3.0",
     "expo-keep-awake": "~8.4.0",
     "expo-media-library": "~10.0.0",
