--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/netinfo": "5.9.7",
     "@react-native-community/slider": "3.0.3",
     "date-fns": "^2.19.0",
